package net.zero918nobita.smilepp.frontend;

abstract class Stm {
}
