package net.zero918nobita.smilepp;

public interface Pass {
}
