@startuml

package net.zero918nobita {
  package acinonyx {
    class Main {
      + {static} void main(String[] args)
    }

    class Lexer {
      + {static} ArrayList<ArrayList<Token>> lex(String src)
    }

    class Token {
      + void Token(String name, int line, int letter)
      + boolean equals(Object o)
      + String toString()
    }
  }

  package smilepp {
    package core {
      interface Pass
    }

    package frontend {
      class Addition {
        + void setVariable()
        + void setLeft()
        + void setRight()
        + String toString()
      }

      class AssignStm {
        + void setVariable()
        + void setValue()
        + String toString()
      }

      class Builder {
        + String toString()
        + void addStm()
        + void addLabel()
      }

      class IntLiteral {
        + String toString()
      }

      class IfStm {
      }

      abstract class Node
      abstract class Stm

      class Variable {
        + void setName(String name)
      }

      Addition <|-- Stm
      AssignStm <|-- Stm
      IfStm <|-- Stm
      IntLiteral <|-- Node
      Variable <|-- Node
    }
  }
}

@enduml
